Modernize BridgeConfigReconciliationTaskTest
Use BindingMap.of() and List.of() to create lists.

Change-Id: I808106fe25903123f2de69fc47bb14a76b83ff1f
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>